--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     </div>
                 </div>
                 <div class="program mengambang">
-                    <img src="aset/icon/jaringan.png" alt="program3">
+                    <img src="aset/icon/koneksi.png" alt="program3">
                     <div class="isi_program">
                         <h3>Jaringan</h3>
                         <p>Meningkatkan kualitas, jaringan, kemitraan dan kerjasama pendidikan Muhammadiyah dalam dan luar negeri.</p>
                     </div>
                 </div>
                 <div class="program mengambang">
-                    <img src="aset/icon/pople.png" alt="program4">
+                    <img src="aset/icon/paper.png" alt="program4">
                     <div class="isi_program">
                         <h3>Sumber Daya</h3>
                         <p>Meningkatkan kualitas kepemimpinan pembelajaran bagi guru dan kepala sekolah, tata kelola, peraturan dan penjaminan mutu pendidikan Muhammadiyah baik Sekolah, Madrasah dan Pondok Pesantren.</p>
@@ -161,6 +161,7 @@
             <a class="wa" href="#"><img src="aset/icon/wa.png" alt="wa"></a>
             <a class="ig" href="#"><img src="aset/icon/ig.png" alt="ig"></a>
             <a class="fb" href="#"><img src="aset/icon/fb.png" alt="fb"></a>
+            <a class="yt" href="#"><img src="aset/icon/youtube.png" alt="yt"></a>
         </div>
         <div class="copy">
             <span>Copyright&copy; 2024 Joko Purnomo</span>
