Menambahkan Galery Pada Home

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div class="isi">
                 <div class="card mengambang">
-                    <img src="aset/img/galeri/bg1.png" alt="sekolah">
+                    <img src="aset/img/bg1.png" alt="sekolah">
                     <span>Sekolah</span>
                     <p>Sekolah Muhammadiyah dari Sabang sampai Merauke</p>
                 </div>
@@ -150,6 +150,31 @@
         </div>
     </div>
 
+    <!-- Galery -->
+    <div class="container5">
+        <div class="galery">
+            <h2><span>Galery</span></h2>
+            <div class="row">
+                <div class="column">
+                    <img src="aset/img/galeri/01.png" alt="01">
+                    <img src="aset/img/galeri/02.png" alt="02">
+                    <img src="aset/img/galeri/03.png" alt="03">
+                    
+                </div>
+                <div class="column">
+                    <img src="aset/img/galeri/04.png" alt="04">
+                    <img src="aset/img/galeri/05.png" alt="05">
+                    <img src="aset/img/galeri/06.png" alt="06">
+                </div>
+                <div class="column hilang">
+                    <img src="aset/img/galeri/07.png" alt="07">
+                    <img src="aset/img/galeri/08.png" alt="08">
+                    <img src="aset/img/galeri/09.png" alt="09">
+                </div>
+            </div>
+        </div>
+        
+    </div>
 
     <!-- Foother -->
     <footer>
