--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Video -->
     <div class="container1">
-        <video src="aset/video/video01.mp4" autoplay muted loop></video>
+        <video src="aset/video/video01.mp4" autoplay muted loop preload="auto"></video>
         <h1>Majelis Dikdasmen PP Muhammadiyah</h1>
     </div>
 
@@ -131,17 +131,17 @@
             </div>
             <div class="isi">
                 <div class="card mengambang">
-                    <img src="aset/img/bg1.png" alt="sekolah">
+                    <img src="aset/img/bg1.png" alt="sekolah" loading="lazy">
                     <span>Sekolah</span>
                     <p>Sekolah Muhammadiyah dari Sabang sampai Merauke</p>
                 </div>
                 <div class="card mengambang">
-                    <img src="aset/img/hd3.jpg" alt="madrasah">
+                    <img src="aset/img/hd3.jpg" alt="madrasah" loading="lazy">
                     <span>Madrasah</span>
                     <p>Madrasah Muhammadiyah dari Sabang sampai Merauke</p>
                 </div>
                 <div class="card mengambang">
-                    <img src="aset/img/hd1.jpg" alt="">
+                    <img src="aset/img/hd1.jpg" alt="Pesantren" loading="lazy">
                     <span>Pesantren</span>
                     <p>Pesantren Muhammadiyah dari Sabang sampai Merauke</p>
                 </div>
@@ -156,20 +156,20 @@
             <h2><span>Galery</span></h2>
             <div class="row">
                 <div class="column">
-                    <img src="aset/img/galeri/01.png" alt="01">
-                    <img src="aset/img/galeri/02.png" alt="02">
-                    <img src="aset/img/galeri/03.png" alt="03">
+                    <img src="aset/img/galeri/01.png" alt="01" loading="lazy">
+                    <img src="aset/img/galeri/02.png" alt="02" loading="lazy">
+                    <img src="aset/img/galeri/03.png" alt="03" loading="lazy">
                     
                 </div>
                 <div class="column">
-                    <img src="aset/img/galeri/04.png" alt="04">
-                    <img src="aset/img/galeri/05.png" alt="05">
-                    <img src="aset/img/galeri/06.png" alt="06">
+                    <img src="aset/img/galeri/04.png" alt="04" loading="lazy">
+                    <img src="aset/img/galeri/05.png" alt="05" loading="lazy">
+                    <img src="aset/img/galeri/06.png" alt="06" loading="lazy">
                 </div>
                 <div class="column hilang">
-                    <img src="aset/img/galeri/07.png" alt="07">
-                    <img src="aset/img/galeri/08.png" alt="08">
-                    <img src="aset/img/galeri/09.png" alt="09">
+                    <img src="aset/img/galeri/07.png" alt="07" loading="lazy">
+                    <img src="aset/img/galeri/08.png" alt="08" loading="lazy">
+                    <img src="aset/img/galeri/09.png" alt="09" loading="lazy">
                 </div>
             </div>
         </div>
