--- a/kontak.html
+++ b/kontak.html
@@ -32,7 +32,7 @@
 
     <!-- Sampul -->
     <div class="sampul kontak">
-        <img src="aset/icon/bingkai.png" alt="">
+        <img src="aset/icon/bingkai.png" alt="" loading="eager">
     </div>
 
     <div class="container9">
