--- a/sejarah.html
+++ b/sejarah.html
@@ -32,7 +32,7 @@
     
 <!-- Sampul -->
     <div class="sampul sejarah">
-        <img src="aset/icon/bingkai.png" alt="">
+        <img src="aset/icon/bingkai.png" alt="" loading="eager">
     </div>
 
 
