--- a/susunan.html
+++ b/susunan.html
@@ -34,7 +34,7 @@
 
     <!-- Sampul -->
     <div class="sampul susunan">
-        <img src="aset/icon/bingkai.png" alt="">
+        <img src="aset/icon/bingkai.png" alt="" loading="eager">
     </div>
 
     <div class="container8">
