--- a/visimisi.html
+++ b/visimisi.html
@@ -33,7 +33,7 @@
     
     <!-- Sampul -->
     <div class="sampul visimisi">
-        <img src="aset/icon/bingkai.png" alt="">
+        <img src="aset/icon/bingkai.png" alt="" loading="eager">
     </div>
 
     <div class="container7">
