--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Video -->
     <div class="container1">
-        <video src="aset/video/video01.mp4" autoplay muted loop></video>
+        <video src="aset/video/video01.webm" autoplay muted loop></video>
         <h1>Majelis Dikdasmen PP Muhammadiyah</h1>
     </div>
 
