Membuat branch barkab

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Navbar -->
     <nav>
         <div class="logo">
-            <a  href="index.html"><img class="kecil" src="aset/icon/logo01-smal.png" alt="Logo"></a>
-            <a  href="index.html"><img class="besar" src="aset/icon/logo01.png" alt="Logo"></a>
+            <a  href="index.html"><img class="kecil" src="aset/icon/logo02.png" alt="Logo"></a>
+            <a  href="index.html"><img class="besar" src="aset/icon/logo02.png" alt="Logo"></a>
        
         </div>
         
