Memperbaiki halaman Sejarah

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <a class="yt" href="#"><img src="aset/icon/youtube.png" alt="yt"></a>
         </div>
         <div class="copy">
-            <span>Copyright&copy; 2024 Joko Purnomo</span>
+            <span>Copyright&copy; 2024 Joko Purnomo</span> | <a href="https://www.freepik.com">Icon by Freepik</a>
         </div>
     </footer>
 
