--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <!-- Foother -->
     <footer>
-        <h3>Majelis Dikdasmen PP Muhammadiyah</h3>
+        <h3>SMK Muhammadiyah 04 Boyolali</h3>
         <div class="sosmet">
             <a class="wa" href="#"><img src="aset/icon/wa.png" alt="wa"></a>
             <a class="ig" href="#"><img src="aset/icon/ig.png" alt="ig"></a>
