--- a/sejarah.html
+++ b/sejarah.html
@@ -50,6 +50,7 @@
                 <p>
                     berdiri pada Juni 1997 dengan label Sekolah Teknik Menengah ( STM ) dengan Jurusan awal
                 </p>
+                <br>
                 <ol>
                     <li>Teknik Mesin Otomotif</li>
                     <li>Teknik Mesin Industri</li>
@@ -98,7 +99,7 @@
 
    <!-- Foother -->
    <footer>
-    <h3>Majelis Dikdasmen PP Muhammadiyah</h3>
+    <h3>SMK Muhammadiyah 04 Boyolali</h3>
     <div class="sosmet">
         <a class="wa" href="#"><img src="aset/icon/wa.png" alt="wa"></a>
         <a class="ig" href="#"><img src="aset/icon/ig.png" alt="ig"></a>
