Memperbaiki Struktur Halaman

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMK Muhammadiyah 4 Boyolali</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="aset/icon/logo02-smal.png">
+
 </head>
 <body>
 
@@ -83,7 +85,7 @@
     <div class="container4">
         <div class="program_pengembangan">
             <div class="judul">
-                <h2><span class="warna">PROGRAM</span> PENGEMBANGAN</h2>
+                <h2><span class="warna">PROGRAM</span> KEAHLIAN</h2>
             </div>
             <div class="daftar_program">
                 <div class="program mengambang">
@@ -148,7 +150,7 @@
         <div class="pengelola">
             <div class="judul">
                 <h2>PENGELOLAAN</h2>
-                <p>Majelis Pendidikan Dasar dan Menengah Pimpinan Pusat Muhammadiyah mengelola AUM Pendidikan se-Indonesia</p>
+                <p>Temukan berbagai informasi terkait dengan pengelolaan aset dan fasilitas di SMK Muhammadiyah 04 Boyolali untuk mendukung efisiensi dan kelancaran kegiatan pendidikan.</p>
             </div>
             <div class="isi">
                 <div class="card mengambang">
@@ -164,7 +166,7 @@
                 <div class="card mengambang">
                     <img src="aset/img/hd1.jpg" alt="Pesantren" loading="lazy">
                     <span>Ruang</span>
-                    <p>Jumlah Ruang kelas dan Fasilitas lainnya ~57</p>
+                    <p>Jumlah Ruang kelas dan Fasilitas lainnya ~57 Ruang</p>
                 </div>
             </div>
             
@@ -174,7 +176,7 @@
     <!-- Galery -->
     <div class="container5">
         <div class="galery">
-            <h2><span>Galery</span></h2>
+            <h2><span>Galeri SMK</span></h2>
             <div class="row">
                 <div class="column">
                     <img src="aset/img/galeri/01.png" alt="01" loading="lazy">
