--- a/sejarah.html
+++ b/sejarah.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sejarah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="aset/icon/logo02-smal.png">
 </head>
 <body>
    <!-- Navbar -->
