--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="card mengambang">
                     <img src="aset/img/hd3.jpg" alt="madrasah" loading="lazy">
                     <span>Bangunan</span>
-                    <p>Luas Bangunan di SMK Muhammadiyah04 Boyolali 3.695&sup2;</p>
+                    <p>Luas Bangunan di SMK Muhammadiyah04 Boyolali 3.695m&sup2;</p>
                 </div>
                 <div class="card mengambang">
                     <img src="aset/img/hd1.jpg" alt="Pesantren" loading="lazy">
